Modified the Get Started look

--- a/views/getstarted.ejs
+++ b/views/getstarted.ejs
@@ -1,8 +1,60 @@
-<%- include("partials/head") %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        Enosi 
+    </title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/selection.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
+</head>
 
 <body>
-    <%- include("partials/navbar") %>
-    <h1>Which describes you the best?</h1>
+    <div class="panel">
+        <div class="pricing-plan">
+            <img src="images/home-regular-48.png" alt="" class="pricing1-img">
+            <h2 class="pricing-header">Household</h2>
+            <ul class="plan-features">
+                <li class="pricing-features-item">Personal households that have a family</li>
+            </ul>
+            <a href="/form" class="pricing-button">Sign Up</a>
+        </div>
+
+        <div class="pricing-plan">
+            <img src="images/store-alt-solid-48.png" alt="" class="pricing2-img">
+            <h2 class="pricing-header2">Small and Medium Businesses</h2>
+            <ul class="plan-features">
+                <li class="pricing-features-item">For businesses with less than 20 employees</li>
+            </ul>
+            <a href="/form" class="pricing-button">Sign Up</a>
+        </div>
+
+        <div class="pricing-plan">
+            <img src="images/business-solid-48.png" alt="" class="pricing3-img">
+            <h2 class="pricing-header">Corporations</h2>
+            <ul class="plan-features">
+                <li class="pricing-features-item">Corporations with 20+ employees</li>
+            </ul>
+            <a href="/form" class="pricing-button">Further Questions</a>
+        </div>
+
+        <div class="pricing-plan">
+            <img src="images/user-regular-48.png" alt="" class="pricing4-img">
+            <h2 class="pricing-header">Community</h2>
+            <ul class="plan-features">
+                <li class="pricing-features-item">Government/Local communities</li>
+            </ul>
+            <a href="/form" class="pricing-button">Sign Up</a>
+
+        </div>
+    </div>
+
+    
+    
+
 
 </body>
 
