--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,25 @@
 <%- include("partials/head") %>
-<body>
+<body>    
     <%- include("partials/navbar") %>
 
+    <section class="home" id="home">
+        <div class="home__container container grid">
+            <img src="img/pic1.jpeg" alt="" class="home__img">
 
-    <p>
-        <a href="/getstarted"> <button>Get Started</button></a>
-    </p>
+            <div class="home__data">
+                <h1 class="home__title">
+                    Enosi <br> 
+                </h1>
+                <p class="home__description">
+                    Changing the way our energy is used 
+                </p>
+                <a href="/getstarted" class="button button--flex">
+                    <button> Get Started</button> <i class="ri-arrow-right-down-line button__icon"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+
 
 
 
