--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -22,4 +22,42 @@
         </li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
+
+  <nav class="nav container">
+    <a href="#" class="nav__logo">
+        <i class='bx bx-circle nav__logo-icon'></i> Enosi
+    </a>
+    <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+            <li class="nav__item">
+                <a href="/" class="nav__link active-link">Home</a>
+            </li>
+            <li class="nav__item">
+                <a href="/getstarted" class="nav__link">Get Started</a>
+            </li>
+            <li class="nav__item">
+                <a href="/about" class="nav__link">About</a>
+            </li>
+            <li class="nav__item">
+                <a href="/powertracer" class="nav__link">PowerTracer</a>
+            </li>
+            <li class="nav__item">
+                <a href="/faq" class="nav__link">FAQ</a>
+            </li>
+        </ul>
+
+        <div class="nav__close" id="nav-close">
+            <i class="ri-close-line"></i>
+        </div>
+    </div>
+
+    <div class="nav__btns">
+        <!-- Theme change button -->
+        <i class="ri-moon-line change-theme" id="theme-button"></i>
+
+        <div class="nav__toggle" id="nav-toggle">
+            <i class="ri-menu-line"></i>
+        </div>
+    </div>
+</nav>
