--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -12,11 +12,12 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
-<body>    
+<body>   
+<body>
     <nav class="nav container">
-        <a href="/" class="nav__logo">
-            <i class='bx bx-circle nav__logo-icon'></i> Enosi
-        </a>
+        <a href="/">
+            <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.jpeg" alt="" width="100px"></i> 
+            </a>
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
                 <li class="nav__item">
@@ -26,10 +27,10 @@
                     <a href="/getstarted" class="nav__link">Get Started</a>
                 </li>
                 <li class="nav__item">
-                    <a href="/powertracer" class="nav__link">PowerTracer</a>
+                    <a href="/powertracer" class="nav__link active-link">PowerTracer</a>
                 </li>
                 <li class="nav__item">
-                    <a href="/about" class="nav__link active-link">About</a>
+                    <a href="/about" class="nav__link">About</a>
                 </li>
                 <li class="nav__item">
                     <a href="https://support.enosi.energy/en/?q=community" class="nav__link">FAQ</a>
@@ -50,10 +51,9 @@
             </div>
         </div>
     </nav>
-    <h1>ENOSI IS A COMPANY ABOUT CHANGE</h1>
+
+    <p>SUP</p>
 
 
 
 </body>
-
-</html>
