--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,8 @@
     <title>
         Enosi 
     </title>
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/selection.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/script.js"></script>
     <script src="/public/js/jquery.js"></script>
