added more views

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,8 +14,8 @@
 </head>
 <body>    
     <nav class="nav container">
-        <a href="/" class="nav__logo">
-            <i class='bx bx-circle nav__logo-icon'></i> Enosi
+        <a href="/">
+            <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.jpeg" alt="" width="100px"></i> 
         </a>
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
