--- a/views/form.ejs
+++ b/views/form.ejs
@@ -14,7 +14,7 @@
 
 <body>
 
-    <form action="http://localhost:3000/getstarted" method="post">
+    <form action="/form" method="post">
         <label for="suburb">Which suburb are you from?</label> <br>
         <input type="number" id="subrb" name="suburb"> <br>
         <br>
@@ -25,21 +25,21 @@
         <input type="number" id="energyuse" name="energyuse"> <br>
         <br>
         <label for="solarpanel">Does your residence have solar panels?</label> <br>
-        <input type="radio" id="yes" name="yes" value="yes"> 
-        <label for="yes">Yes</label> <br>
-        <input type="radio" id="no" name="no" value="no">
-        <label for="no">No</label> <br>
-        <input type="radio" id="notsure" name="notsure" value="notsure"> 
-        <label for="notsure">Not sure</label> <br>
+        <input type="radio" id="solarpanelyes" name="solarpanel" value="yes"> 
+        <label for="solarpanelyes">Yes</label> <br>
+        <input type="radio" id="solarpanelno" name="solarpanel" value="no">
+        <label for="solarpanelno">No</label> <br>
+        <input type="radio" id="solarpanelnotsure" name="solarpanel" value="notsure"> 
+        <label for="solarpanelnotsure">Not sure</label> <br>
 
         <br>
-        <label for="solarpanel">Does your residence have a smart meter?</label> <br>
-        <input type="radio" id="yes" name="yes" value="yes"> 
-        <label for="yes">Yes</label> <br>
-        <input type="radio" id="no" name="no" value="no">
-        <label for="no">No</label> <br>
-        <input type="radio" id="notsure" name="notsure" value="notsure"> 
-        <label for="notsure">Not sure</label> <br>
+        <label for="smartmeter">Does your residence have a smart meter?</label> <br>
+        <input type="radio" id="smartmeteryes" name="smartmeter" value="yes"> 
+        <label for="smartmeteryes">Yes</label> <br>
+        <input type="radio" id="smartmeterno" name="smartmeter" value="no">
+        <label for="smartmeterno">No</label> <br>
+        <input type="radio" id="smartmeternotsure" name="smartmeter" value="notsure"> 
+        <label for="smartmeternotsure">Not sure</label> <br>
 
 
         <br>
