made changes to chooseenergprovider

--- a/views/chooseenergyprovider.ejs
+++ b/views/chooseenergyprovider.ejs
@@ -7,49 +7,51 @@
     <title>
         Home 
     </title>
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/retailer.css">
     <script src="/script.js"></script>
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
 <body>    
-   <h1>Choose your energy retailer:</h1>
 
    <div class="panel">
+       
     <div class="pricing-plan">
         <img src="images/energylocal.png" alt="" class="pricing1-img">
-        <h2 class="pricing-header">Household</h2>
+        <h2 class="pricing-header">Energy Local</h2>
         <ul class="plan-features">
-            <li class="pricing-features-item">Personal households that have a family</li>
+            <li class="pricing-features-item"> No contracts  </li>
+            <li class="pricing-features-item"> Cleaner Energy  </li>
+            <li class="pricing-features-item"> Australian Owned</li>
         </ul>
-        <a href="/form" class="pricing-button">Sign Up</a>
+        <a href="/form" class="pricing-button">Select this!</a>
     </div>
 
     <div class="pricing-plan">
-        <img src="images/store-alt-solid-48.png" alt="" class="pricing2-img">
-        <h2 class="pricing-header2">Small and Medium Businesses</h2>
+        <img src="images/nextbusinessenergy.jpeg" alt="" class="pricing2-img">
+        <h2 class="pricing-header2">Next Business Energy</h2>
         <ul class="plan-features">
             <li class="pricing-features-item">For businesses with less than 20 employees</li>
         </ul>
-        <a href="/form" class="pricing-button">Sign Up</a>
+        <a href="/form" class="pricing-button">Select this!</a>
     </div>
 
     <div class="pricing-plan">
-        <img src="images/business-solid-48.png" alt="" class="pricing3-img">
-        <h2 class="pricing-header">Corporations</h2>
+        <img src="images/momentum energy.jpeg" alt="" class="pricing3-img" width="500px" >
+        <h2 class="pricing-header">Momentum Energy</h2>
         <ul class="plan-features">
             <li class="pricing-features-item">Corporations with 20+ employees</li>
         </ul>
-        <a href="/form" class="pricing-button">Further Questions</a>
+        <a href="/form" class="pricing-button">Not available</a>
     </div>
 
     <div class="pricing-plan">
-        <img src="images/user-regular-48.png" alt="" class="pricing4-img">
-        <h2 class="pricing-header">Community</h2>
+        <img src="images/simply energy.png" alt="" class="pricing4-img">
+        <h2 class="pricing-header">Simply Energy</h2>
         <ul class="plan-features">
             <li class="pricing-features-item">Government/Local communities</li>
         </ul>
-        <a href="/form" class="pricing-button">Sign Up</a>
+        <a href="/form" class="pricing-button">Not available</a>
 
     </div>
 </div>
