--- a/public/css/retailer.css
+++ b/public/css/retailer.css
@@ -80,26 +80,23 @@ body {
 }
 
 .pricing1-img {
-    margin-left: 65px;
+    width = 
     margin-bottom: 0px;
     max-width: 100%;
 }
 
 .pricing2-img {
-    margin-left: 75px;
     margin-bottom: 0px;
     max-width: 100%;
 }
 
 .pricing3-img{
-    margin-left: 45px; 
     margin-bottom: 0px;
     max-width: 110%;
 
 }
 
 .pricing4-img {
-    margin-left: 45px; 
     margin-bottom: 0px;
     max-width: 110%;
 }
