--- a/views/chooseenergyprovider.ejs
+++ b/views/chooseenergyprovider.ejs
@@ -17,27 +17,29 @@
    <div class="panel">
        
     <div class="pricing-plan">
-        <img src="images/energylocal.png" alt="" class="pricing1-img">
+        <img src="images/energylocal.png" alt="" class="pricing1-img" width="400px" height="100px">
         <h2 class="pricing-header">Energy Local</h2>
         <ul class="plan-features">
             <li class="pricing-features-item"> No contracts  </li>
-            <li class="pricing-features-item"> Cleaner Energy  </li>
+            <li class="pricing-features-item"> 100% Solar and Hydro energy  </li>
             <li class="pricing-features-item"> Australian Owned</li>
         </ul>
         <a href="/form" class="pricing-button">Select this!</a>
     </div>
 
     <div class="pricing-plan">
-        <img src="images/nextbusinessenergy.jpeg" alt="" class="pricing2-img">
+        <img src="images/nextbusinessenergy.jpeg" alt="" class="pricing2-img" width= "400px" height = "100px">
         <h2 class="pricing-header2">Next Business Energy</h2>
         <ul class="plan-features">
-            <li class="pricing-features-item">For businesses with less than 20 employees</li>
+            <li class="pricing-features-item">Competitive Rates</li>
+            <li class="pricing-features-item">100% Australian Owned</li>
+            <li class="pricing-features-item">Australian-Based customer care</li>
         </ul>
         <a href="/form" class="pricing-button">Select this!</a>
     </div>
 
     <div class="pricing-plan">
-        <img src="images/momentum energy.jpeg" alt="" class="pricing3-img" width="500px" >
+        <img src="images/momentum energy.jpeg" alt="" class="pricing3-img" width="400px" height="100px"  >
         <h2 class="pricing-header">Momentum Energy</h2>
         <ul class="plan-features">
             <li class="pricing-features-item">Corporations with 20+ employees</li>
@@ -46,7 +48,7 @@
     </div>
 
     <div class="pricing-plan">
-        <img src="images/simply energy.png" alt="" class="pricing4-img">
+        <img src="images/simply energy.png" alt="" class="pricing4-img" width="400px" height="100px">
         <h2 class="pricing-header">Simply Energy</h2>
         <ul class="plan-features">
             <li class="pricing-features-item">Government/Local communities</li>
