added dot points

--- a/views/chooseenergyprovider.ejs
+++ b/views/chooseenergyprovider.ejs
@@ -42,7 +42,9 @@
         <img src="images/momentum energy.jpeg" alt="" class="pricing3-img" width="400px" height="100px"  >
         <h2 class="pricing-header">Momentum Energy</h2>
         <ul class="plan-features">
-            <li class="pricing-features-item">Corporations with 20+ employees</li>
+            <li class="pricing-features-item">Corporations Only</li>
+            <li class="pricing-features-item">Largest renewble hydro generator</li>
+            <li class="pricing-features-item">Award-winning</li>
         </ul>
         <a href="/form" class="pricing-button">Not available</a>
     </div>
@@ -51,7 +53,9 @@
         <img src="images/simply energy.png" alt="" class="pricing4-img" width="400px" height="100px">
         <h2 class="pricing-header">Simply Energy</h2>
         <ul class="plan-features">
-            <li class="pricing-features-item">Government/Local communities</li>
+            <li class="pricing-features-item">Corporations Only</li>
+            <li class="pricing-features-item">Dedicated business support</li>
+            <li class="pricing-features-item">Simpler bills</li>
         </ul>
         <a href="/form" class="pricing-button">Not available</a>
 
