made more changes

--- a/views/chooseenergyprovider.ejs
+++ b/views/chooseenergyprovider.ejs
@@ -24,7 +24,7 @@
             <li class="pricing-features-item"> 100% Solar and Hydro energy  </li>
             <li class="pricing-features-item"> Australian Owned</li>
         </ul>
-        <a href="/form" class="pricing-button">Select this!</a>
+        <a href="/onlyneedpowertracer" class="pricing-button">Select this!</a>
     </div>
 
     <div class="pricing-plan">
@@ -35,7 +35,7 @@
             <li class="pricing-features-item">100% Australian Owned</li>
             <li class="pricing-features-item">Australian-Based customer care</li>
         </ul>
-        <a href="/form" class="pricing-button">Select this!</a>
+        <a href="/onlyneedpowertracer" class="pricing-button">Select this!</a>
     </div>
 
     <div class="pricing-plan">
@@ -46,7 +46,7 @@
             <li class="pricing-features-item">Largest renewble hydro generator</li>
             <li class="pricing-features-item">Award-winning</li>
         </ul>
-        <a href="/form" class="pricing-button">Not available</a>
+        <a href="" class="pricing-button2">Not available</a>
     </div>
 
     <div class="pricing-plan">
@@ -57,7 +57,7 @@
             <li class="pricing-features-item">Dedicated business support</li>
             <li class="pricing-features-item">Simpler bills</li>
         </ul>
-        <a href="/form" class="pricing-button">Not available</a>
+        <a href="" class="pricing-button2">Not available</a>
 
     </div>
 </div>
