--- a/views/form.ejs
+++ b/views/form.ejs
@@ -24,6 +24,9 @@
         <label for="energyuse">How much energy do you use per quarter (kWh)?</label> <br>
         <input type="number" id="energyuse" name="energyuse"> <br>
         <br>
+        <label for="energycost">How much do you pay per quarter?</label> <br>
+        <input type="number" id="energycost" name="energycost"> <br>
+        <br>
         <label for="solarpanel">Does your residence have solar panels?</label> <br>
         <input type="radio" id="solarpanelyes" name="solarpanel" value="yes"> 
         <label for="solarpanelyes">Yes</label> <br>
