--- a/views/onlyneedpowertracer.ejs
+++ b/views/onlyneedpowertracer.ejs
@@ -14,6 +14,37 @@
 </head>
 <body>    
    <h1>Benefits of Power Tracer:</h1>
+
+   <p>
+       Powertracer allows tracking etc...
+   </p>
+
+    <p><h3>For only $2.50 a month you will enjoy all these benefits</h3></p>
+
+   <p>
+        <%if (solar == "yes") { %> 
+            <h3>As you have solar panels, it is possible to export your excess energy through Powertracer's trading platform</h2>
+        <% } %>
+
+   </p>
+
+
+
+   <p>
+        <% if (status == "no"){ %> 
+            <h3> NOTE: As you do not have a smart meter, a 2 week waiting period is needed in order for your energy retailer to swap your old meter in order to use Powertracer </h3>
+        <% } %>
+   </p>
    
+   <a href="">
+    <button>Add Powertracer!</button>
+   </a>
+
+   <a href="">
+    <button>Not interested</button>
+   </a>
+
+
+
 </body>
 </html>
