--- a/public/css/retailer.css
+++ b/public/css/retailer.css
@@ -158,6 +158,21 @@ body {
     transition: background-color 200ms ease-in-out;
 }
 
+.pricing-button2 {
+    border: 1px solid #9dd1ff;
+    border-radius: 10px;
+    color: grey;
+    display: inline-block;
+    padding: 15px 35px;
+    text-decoration: none;
+    margin: 25px 0;
+    transition: background-color 200ms ease-in-out;
+    pointer-events: none;
+}
+
+.pricing-button2:hover, .pricing-button2:focus {
+    background-color: grey;
+}
 
 .pricing-button:hover, .pricing-button:focus {
     background-color: #e1f1ff;
