added all pages

--- a/views/onlyneedpowertracer.ejs
+++ b/views/onlyneedpowertracer.ejs
@@ -36,11 +36,11 @@
         <% } %>
    </p>
    
-   <a href="">
+   <a href="/payment">
     <button>Add Powertracer!</button>
    </a>
 
-   <a href="">
+   <a href="/payment">
     <button>Not interested</button>
    </a>
 
