made more changes

--- a/views/congrats.ejs
+++ b/views/congrats.ejs
@@ -15,7 +15,7 @@
 
     <h2>Congratulations and Thank You!</h2>
 
-    <h3>Detailed will be emailed to you for further action</h3>
+    <h3>Details will be emailed to you for further action</h3>
 
 
 </body>
