--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,32 +7,42 @@
     <title>
         Enosi 
     </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/selection.css">
+    <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
 </head>
 
 <body>
 
-    <form action="/form" method="post">
+
+    <form class="panel" action="/form" method="post">
+
+        <br>
+        <br>
+        <br>
+
         <label for="suburb">Which suburb are you from?</label> <br>
-        <input type="number" id="subrb" name="suburb"> <br>
+        <input class="button" type="number" id="subrb" name="suburb"> <br>
         <br>
         <label for="energycompany">Which energy provider are you with?</label> <br>
-        <input type="text" id="energycompany" name="energycompany"> <br>
+        <input class="button" type="text" id="energycompany" name="energycompany" > <br>
         <br>
         <label for="energyuse">How much energy do you use per quarter (kWh)?</label> <br>
-        <input type="number" id="energyuse" name="energyuse"> <br>
+        <input class="button" type="number" id="energyuse" name="energyuse"> <br>
         <br>
         <label for="energycost">How much do you pay per quarter?</label> <br>
-        <input type="number" id="energycost" name="energycost"> <br>
+        <input class="button" type="number" id="energycost" name="energycost"> <br>
         <br>
         <label for="solarpanel">Does your residence have solar panels?</label> <br>
-        <input type="radio" id="solarpanelyes" name="solarpanel" value="yes"> 
+        <input class="button" type="radio" id="solarpanelyes" name="solarpanel" value="yes"> 
         <label for="solarpanelyes">Yes</label> <br>
-        <input type="radio" id="solarpanelno" name="solarpanel" value="no">
+        <input class="button" type="radio" id="solarpanelno" name="solarpanel" value="no">
         <label for="solarpanelno">No</label> <br>
-        <input type="radio" id="solarpanelnotsure" name="solarpanel" value="notsure"> 
+        <input class="button" type="radio" id="solarpanelnotsure" name="solarpanel" value="notsure"> 
         <label for="solarpanelnotsure">Not sure</label> <br>
 
         <br>
@@ -46,8 +56,7 @@
 
 
         <br>
-        <br>
-        <button>Submit</button>
+        <button class="pricing-button">Submit</button>
         
 
     </form>
