--- a/views/onlyneedpowertracer.ejs
+++ b/views/onlyneedpowertracer.ejs
@@ -7,7 +7,7 @@
     <title>
         Home 
     </title>
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/powertracer.css">
     <script src="/script.js"></script>
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
@@ -16,32 +16,43 @@
    <h1>Benefits of Power Tracer:</h1>
 
    <p>
-       Powertracer allows tracking etc...
+       Powertracer allows users to have traceability of where their energy comes from
    </p>
+   <br>
+   <p>
+    
 
-    <p><h3>For only $2.50 a month you will enjoy all these benefits</h3></p>
+   </p>
+   <br>
 
    <p>
         <%if (solar == "yes") { %> 
-            <h3>As you have solar panels, it is possible to export your excess energy through Powertracer's trading platform</h2>
+            <h3>If you have solar panels, you can ultilise Powertracer's trading platform to trade your excess energy used to other Powertracer users</h2>
+            <br>
+            <h3>
+                Trading opportunities include being able to trade your excess energy to people that you konw 
+                There will be options to trade with people that you know (all users must be using Powertracer)
+                Or you can trade blindly to your own community at a price that you decide
+                
+
+            </h3>
+
         <% } %>
 
    </p>
-
-
-
+   <br>
    <p>
         <% if (status == "no"){ %> 
-            <h3> NOTE: As you do not have a smart meter, a 2 week waiting period is needed in order for your energy retailer to swap your old meter in order to use Powertracer </h3>
+            <h3> NOTE: As you do not have a smart meter, a 2 week waiting period is needed in order for your energy retailer to swap your old meter for a smart meter in order to use Powertracer </h3>
         <% } %>
    </p>
    
-   <a href="/payment">
-    <button>Add Powertracer!</button>
+   <a href="/paymentyes">
+    <button class="button">Add Powertracer for Free!</button>
    </a>
 
-   <a href="/payment">
-    <button>Not interested</button>
+   <a href="/paymentno">
+    <button class="button">Not interested</button>
    </a>
 
 
