--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
     <title>
         Home 
     </title>
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/about.css">
     <script src="/script.js"></script>
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
@@ -15,7 +15,7 @@
 <body>    
     <nav class="nav container">
         <a href="/">
-            <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.jpeg" alt="" width="100px"></i> 
+            <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.png" alt="" width="100px"></i> 
         </a>
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
@@ -50,9 +50,74 @@
             </div>
         </div>
     </nav>
-    <h1>ENOSI IS A COMPANY ABOUT CHANGE</h1>
 
+    <section class="about section container" id="about">
+        <div class="about__container grid">
+            <img src="img/pic2.jpeg" alt="" class="about__img">
 
+            <div class="about__data">
+                <h4 class="section__title about__title">
+                    Who is Enosi ? <br> & what do we do?
+                </h4>
+
+                <p class="about__description">
+                    Enosi is accelerating the transition to clean electricity. 
+
+                    We unlock the ability for small customers to source their electricity directly from solar and wind farms.
+
+                </p>
+
+                <div class="about__data">
+                    <h4 class="section__title about__title">
+                        Why choose us?
+                    </h4>
+
+                <div class="about__details">
+                    <p class="about__details-description">
+                        <i class="ri-checkbox-fill about__details-icon"></i>
+                            
+                        24/7 Energy traceability
+                        An unmet global need
+                    </p>
+
+                    <p class="about__details-description">
+                        <i class="ri-checkbox-fill about__details-icon"></i>
+                        
+                        24/7 carbon free energy
+
+                    </p>
+                    <p class="about__details-description">
+                        <i class="ri-checkbox-fill about__details-icon"></i>
+                        Sustainability Drivers
+                        within organisations
+
+                    </p>
+                    <p class="about__details-description">
+                        <i class="ri-checkbox-fill about__details-icon"></i>
+                        Earlier delivery of Net Zero commitments
+                    </p>
+
+                    <p class="about__details-description">
+                        <i class="ri-checkbox-fill about__details-icon"></i>
+                        24/7 Energy Traceability
+                        to the watt-hour
+                        
+                    </p>
+
+                    <p class="about__details-description">
+                        <i class="ri-checkbox-fill about__details-icon"></i>
+                        Putting direct demand-side pressure on delivery of more renewables
+
+                        
+                    </p>
+                </div>
+
+                <a href="/powertracer" class="button">
+                    Learn more about Powertracer <i class="ri-arrow-right-down-line button__icon"></i>
+                </a>
+            </div>
+        </div>
+    </section>
 
 </body>
 
