--- a/views/chooseenergyprovider.ejs
+++ b/views/chooseenergyprovider.ejs
@@ -35,7 +35,7 @@
             <li class="pricing-features-item">100% Australian Owned</li>
             <li class="pricing-features-item">Australian-Based customer care</li>
         </ul>
-        <a href="/onlyneedpowertracer" class="pricing-button">Select this!</a>
+        <a href="/nextbusinessenergy" class="pricing-button">Select this!</a>
     </div>
 
     <div class="pricing-plan">
