--- a/views/onlyneedpowertracer.ejs
+++ b/views/onlyneedpowertracer.ejs
@@ -27,17 +27,17 @@
 
    <p>
         <%if (solar == "yes") { %> 
-            <h3>If you have solar panels, you can ultilise Powertracer's trading platform to trade your excess energy used to other Powertracer users</h2>
+            <h3>If you have solar panels, you can ultilise Powertracer's trading platform to trade your excess energy to other Powertracer users</h2>
             <br>
             <h3>
                 Trading opportunities include being able to trade your excess energy to people that you konw 
                 There will be options to trade with people that you know (all users must be using Powertracer)
                 Or you can trade blindly to your own community at a price that you decide
-                
-
             </h3>
-
-        <% } %>
+        <% } else {%>
+            Trading opportunities include being able to purchase carbon-free energy from solar/wind/hydro farms 
+            Traceability and 
+        <% } %> 
 
    </p>
    <br>
@@ -51,7 +51,7 @@
     <button class="button">Add Powertracer for Free!</button>
    </a>
 
-   <a href="/paymentno">
+   <a href="/">
     <button class="button">Not interested</button>
    </a>
 
