--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,10 +12,10 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
-<body>    
+<body background="images/grid.jpeg">    
     <nav class="nav container">
         <a href="/">
-        <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.jpeg" alt="" width="100px"></i> 
+        <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.png" alt="" width="100px"></i> 
         </a>
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
