--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -7,7 +7,7 @@
     <title>
         Home 
     </title>
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/powertracer.css">
     <script src="/script.js"></script>
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
@@ -16,7 +16,7 @@
 <body>
     <nav class="nav container">
         <a href="/">
-            <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.jpeg" alt="" width="100px"></i> 
+            <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.png" alt="" width="100px"></i> 
             </a>
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
@@ -52,7 +52,46 @@
         </div>
     </nav>
 
-    <p>SUP</p>
+    <section class="steps section container">
+        <div class="steps__bg">
+            <h2 class="section__title-center steps__title">
+                What is <br>Powertracer?
+            </h2>
+
+            <div class="steps__container grid">
+                <div class="steps__card">
+                    <div class="steps__card-number">01</div>
+                    <h3 class="steps__card-title">Trading energy</h3>
+                    <p class="steps__card-description">
+                        Software that enables trading in renewable energy from solar, 
+                        hydro, wind farms direct to users
+                    </p>
+                </div>
+
+                <div class="steps__card">
+                    <div class="steps__card-number">02</div>
+                    <h3 class="steps__card-title">Personal or Community Trades</h3>
+                    <p class="steps__card-description">
+                        Trade with people you know or blindly through your community
+                    </p>
+                </div>
+
+                <div class="steps__card">
+                    <div class="steps__card-number">03</div>
+                    <h3 class="steps__card-title">Energy Traceability</h3>
+                    <p class="steps__card-description">
+                        All your energy usage is traced through Powertracer, allowing users to see where their energy comes from
+
+                    </p>
+                </div>
+
+            </div>
+            <a href="/getstarted"> <button class="button">Get started with Powertracer!</button></a>
+        </div>
+
+
+        
+    </section>
 
 
 
